Desigualdade estrita de Rao-Blackwell
Teorema 7.9.1 deGroot

--- a/4 periodo/Abtract_of_Titica.tex
+++ b/4 periodo/Abtract_of_Titica.tex
@@ -334,6 +334,10 @@ Se a função de verossimilhança admite fatorização pelo Teorema~\ref{teo:fat
 Seja $\delta(\textbf{X})$ um estimador, \textbf{T} uma estatística suficiente para $\theta$ e seja $\delta_0(\textbf{T})$ como na Definição~\ref{def:est. cond.}. Então vale que
 
 $$R(\theta, \delta_0) \leq R(\theta, \delta)$$
+
+Além disso, se $R(\theta, \delta) < \infty$ e $\delta (\textbf{X})$ não é função de $\textbf{T}$, vale a desigualdade estrita:
+
+$$R(\theta, \delta_0) < R(\theta, \delta)$$
 \end{theorem}
 
 \section*{Aula 8 - Admissibilidade e viés}
