--- a/4 periodo/Abtract_of_Titica.tex
+++ b/4 periodo/Abtract_of_Titica.tex
@@ -23,7 +23,7 @@
 \newtheorem{definition}{Definição}
 
 \newcommand{\assignment}{Abstract of Titica}
-\newcommand{\duedate}{August 28, 2021}
+\newcommand{\duedate}{October 1, 2021}
 
 
 % \renewcommand\thesubsection{\arabic{subsection}}
@@ -425,5 +425,15 @@ $$X \backsim Normal(0, 1), Y = X^2$$
 
 então, tem distribuição qui-quadrado com $m = 1$.
 \end{theorem}
+
+\section*{Aula 11 - Distribuição da média e variância amostrais}
+
+\begin{theorem}[Independência da média e variância amostrais na Normal]
+Seja $X_1, \ldots, X_n$ uma amostra aleatória de uma distribuição Normal com parâmetros $\mu$ e $\sigma^2$, $\overline{X}_n$ e a variância amostral $\overline{S}_n^2$, são independentes. Ademais, $\overline{X}_n \backsim Normal \left ( \mu, \sigma^2 \right )$ e $\overline{S}_n^2 \backsim Gama \left ( \frac{n - 1}{2}, \frac{n}{2 n^2} \right )$
+\end{theorem}
+
+
+
+\section*{Aula 12 - Distribuição t de Student  e intervalos de confiança}
 
 \end{document}
