--- a/2 periodo/Calculo_em_varias_variaveis.tex
+++ b/2 periodo/Calculo_em_varias_variaveis.tex
@@ -32,7 +32,7 @@
 \vspace{170pt}
 \textbf{\Large Wellington José}\\
 \vspace{32pt}
-\textbf{\Large Resumo de CálculoII}\\
+\textbf{\Large Resumo de cálculo em várias variáveis}\\
 \end{center}
 
 \par
