Fix struture error

--- a/3 periodo/EDO_Resumo.tex
+++ b/3 periodo/EDO_Resumo.tex
@@ -81,7 +81,7 @@ $$M(x) + N(x) \dfrac{d y}{d x} = 0$$
 
 ou
 
-$$M(x) d x + N(y) d y = 0 \ (\textasteriskcentered)$$
+$$M(x) d x + N(y) d y = 0 \  (\text{\textasteriskcentered})$$
 
 Suponhamos $H_1 = \int M(x) d x$ e $H_2 = \int N(y) d y$, então (\textasteriskcentered) tem como solução
 
