--- a/4 periodo/Abtract_of_Titica.tex
+++ b/4 periodo/Abtract_of_Titica.tex
@@ -28,7 +28,7 @@
 
 % \renewcommand\thesubsection{\arabic{subsection}}
 
-\title{Resumo Titica}
+\title{Resumo de Inferência Estatística}
 \author{}
 \date{}
 
@@ -42,7 +42,7 @@ Wellington Silva\hfill\textbf{Due:} \duedate\\
 {\let\newpage\relax\maketitle}
 \maketitle
 
-\section*{Aula 1 - O que é e para que serve Inferência Estatística?}
+\section*{Aula 1: O que é e para que serve Inferência Estatística?}
 
 \begin{definition}[Modelo estatístico: informal]
 Um \textbf{modelo estatístico} consiste na identificação de variáveis aleatórias de interesse (observáveis e potencialmente observáveis), na especificação de uma distribuição conjunta para as variáveis aleatórias observáveis e na identificação dos parâmetros $(\theta)$ desta distribuição conjunta. Às vezes é conveniente assumir que os parâmetros são variáveis aleatórias também, mas para isso é preciso especificar uma distribuição conjunta para $\theta$.
@@ -74,7 +74,7 @@ f(x_1, x_2, \ldots, x_n) = f(x_{\pi(1)}, x_{\pi(2)}, \ldots, x_{\pi(n)})
 para qualquer permutação $\pi = \{\pi(1), \pi(2), \ldots, \pi(n)\}$ dos seus elementos. Uma coleção finita é permutável se qualquer subconjunto finito é permutável.
 \end{definition}
 
-\section*{Aula 2 - Distribuição a priori e a posteriori}
+\section*{Aula 2:  Distribuição a priori e a posteriori}
 \begin{definition}[Distribuição a priori]
 Se tratamos o parâmetro $\theta$ como uma variável aleatória, então a \textbf{distribuição a priori} é a distribuição que damos a $\theta$ antes de observarmos as outras variáveis aleatórias de interesse. Vamos denotar a função de densidade/massa de probabilidade da priori por $\xi(\theta)$.
 \end{definition}
@@ -97,7 +97,7 @@ Chamamos $g_n(x)$ de distribuição marginal de $X_1, X_2, \ldots, X_n$.
 Quando encaramos a f.d.p./f.m.p. $f(x_1, x_2, \ldots, x_n \mid \theta)$ como uma função do parâmetro $\theta$, chamamos esta função de \textbf{função de verossimilhança}, e podemos denotá-la como $L(\theta; x)$ ou, quando a notação não criar ambiguidade, simplesmente $L(\theta)$.
 \end{definition}
 
-\section*{Aula 3 - Prioris conjugadas e função de perda}
+\section*{Aula 3: Prioris conjugadas e função de perda}
 \begin{definition}[Hiper-parâmetros]
 Seja $\xi(\theta \mid \phi)$ a distribuição a priori para o parâmetro $\theta$, indexada por $\phi \in \Phi$. Dizemos que $\phi$ é(são) o(s) \textbf{hiper-parâmetro(s)} da priori de $\theta$.
 \end{definition}
@@ -151,7 +151,7 @@ L: \Omega \times \mathbb{R}^d \rightarrow \mathbb{R},
 em que dizemos que o estatístico \textit{perde} $L(\theta, a)$ se o parâmetro vale $\theta$ e a estimativa dada vale a.
 \end{definition}
 
-\section*{Aula 4 - Estimadores de Bayes e EMV}
+\section*{Aula 4: Estimadores de Bayes e EMV}
 
 \begin{definition}[Estimador de Bayes]
 Considere a perda esperada a posteriori:
@@ -224,7 +224,7 @@ y=\sum_{i=1}^nx_i$
     \caption{Famílias Conjugadas}\label{tab:1}
 \end{table}
 
-\section*{Aula 5 - EMV (parte II)}
+\section*{Aula 5: EMV}
 
 \begin{theorem}[Invariância do EMV]
 Considere uma função $\phi: \Omega \rightarrow \mathbb{R}$. Se $\hat{\theta}$ é um EMV para $\theta$, então $\phi(\hat{\theta})$ é um EMV para $\omega = \phi(\theta)$.
@@ -247,7 +247,7 @@ $$\hat{\theta}_{EMV} \rightarrow \theta$$
 
 \end{theorem}
 
-\section*{Aula 6 - Método dos momentos e suficiência}
+\section*{Aula 6: Método dos momentos e suficiência}
 
 \begin{definition}[Método dos momentos]
 Suponha que $X_1, \ldots, X_n$ formam uma sequânica aleatória com distribuição conjunta $f_n (X_1, \ldots, X_n \mid \theta), \theta \in \Omega \subseteq \mathbb{R}^k$ e que o k-ésimo momento existe. Defina $\mu_j (\theta) = E[X_1^j \mid \theta]$ e suponha que $\mu: \Omega \rightarrow \mathbb{R}^k$ é biunívoca, de modo que sua inversa é
@@ -295,7 +295,7 @@ Suponha que $X_1, \ldots, X_n$ perfazem uma amostra aleatória com f.d.p./f.m.p.
 Dizemos que um conjunto de estatísticas $T = \{T_1, \ldots, T_n\}$ é \textbf{suficiente} (conjuntamente) se que a distribuição condicional conjunta de $X_1, \ldots, X_n$ dado $T_1 = t_1, \ldots, T_n = t_n$ não dependentes de $\theta$.
 \end{definition}
 
-\section*{Aula 7 - Suficiência conjunta e mínima, teorema de Rao-Blackwell}
+\section*{Aula 7: Suficiência conjunta e mínima, teorema de Rao-Blackwell}
 
 \begin{definition}[Estatísticas de ordem]
 Seja $\textbf{X} = X_1, \ldots, X_n$ uma amostra aleatória. Dizemos que $Y_1, \ldots, Y_n$ são \textbf{estatísticas de ordem} se $Y_1$ é o menor valor de \textbf{X}, $Y_2$ é o segundo menor valor e assim sucessivamente.
@@ -343,7 +343,7 @@ Além disso, se $R(\theta, \delta) < \infty$ e $\delta (\textbf{X})$ não é fun
 $$R(\theta, \delta_0) < R(\theta, \delta)$$
 \end{theorem}
 
-\section*{Aula 8 - Admissibilidade e viés}
+\section*{Aula 8: Admissibilidade e viés}
 
 \begin{definition}[Admissibilidade]
 Um estimador $\delta$ é dito \textbf{inadmissível} se existe outro estimador $\delta_0$ tal que $R(\theta, \delta_0) \leq R(\theta, \delta), \forall \theta \in \Omega$ e existe $\theta' \in \Omega$ tal que $R(\theta', \delta_0) < R(\theta', \delta)$. Nesse caso, dizemos que $\delta_0$ domina $\delta$. O estimador $\delta_0$ é \textbf{admissível} se (e somente se) não há nenhum estimador que o domine.
@@ -361,7 +361,7 @@ $$\delta_1(\textbf{X}) = \frac{1}{n - 1}\sum_{i = 1}^n (X_i - \overline{X}_n)^2$
 é um estimador não-viesado de v.
 \end{theorem}
 
-\section*{Aula 9 - Eficiência}
+\section*{Aula 9: Eficiência}
 
 \begin{definition}[Informação de Fisher]\label{def:fis}
 Seja X uma variável aleatória com f.d.p./f.m.p. $f(x \mid \theta), \ \theta \in \Omega \subseteq \mathbb{R}$. Suponha que $f(x \mid \theta)$ é duas vezes diferenciável com respeito a $\theta$. Defina $\lambda (x \mid \theta) = \log f(x \mid \theta)$ e
@@ -401,7 +401,7 @@ Um estimador $\delta(\textbf{X})$ é dito \textbf{eficiente} de (sua esperança)
 $$Var_\theta(\delta) = \frac{[m'(\theta)]^2}{n I(\theta)}.$$
 \end{definition}
 
-\section*{Aula 10 - Distribuição de uma estatística amostral e qui-quadrado}
+\section*{Aula 10: Distribuição de uma estatística amostral e qui-quadrado}
 
 \begin{definition}[Distribuição qui-quadrado]
 Dizemos que uma variável aleatória Y tem distribuição \textbf{qui-quadrado} com m graus de liberdade quando
@@ -427,13 +427,13 @@ $$X \backsim Normal(0, 1), Y = X^2$$
 então, tem distribuição qui-quadrado com $m = 1$.
 \end{theorem}
 
-\section*{Aula 11 - Distribuição da média e variância amostrais}
+\section*{Aula 11: Distribuição da média e variância amostrais}
 
 \begin{theorem}[Independência da média e variância amostrais na Normal]
 Seja $X_1, \ldots, X_n$ uma amostra aleatória de uma distribuição Normal com parâmetros $\mu$ e $\sigma^2$, $\overline{X}_n$ e a variância amostral $\overline{S}_n^2$, são independentes. Ademais, $\overline{X}_n \backsim Normal \left ( \mu, \sigma^2 \right )$ e $\overline{S}_n^2 \backsim Gama \left ( \frac{n - 1}{2}, \frac{n}{2 n^2} \right )$
 \end{theorem}
 
-\section*{Aula 12 - Distribuição t de Student  e intervalos de confiança}
+\section*{Aula 12: Distribuição t de Student  e intervalos de confiança}
 
 \begin{definition}[A distribuição t de Student]
 Tome, $Y \backsim \mathrm{Qui-quadrado}(m)$ e $Z \backsim \mathrm{Normal}(0, 1)$ e defina a variável aleatória
@@ -466,7 +466,7 @@ Seja $\textbf{X} = \{ X_1, \ldots, X_n \}$ uma amostra aleatória, onde cada uma
 Dizemos que $I(\textbf{X}) = (A(\textbf{X},B(\textbf{X}))$ é um \textbf{intervalo de confiança} de $100 \gamma \%$ para $g(\theta)$. Se a desigualdade for uma igualdade para todo $\theta \in \Omega$, dizemos que o intervalo é \textbf{exato}.
 \end{theorem}
 
-\section*{Aula 13 - Quantidades Pivotais e Intervalos de confiança}
+\section*{Aula 13: Quantidades Pivotais e Intervalos de confiança}
 
 \begin{definition}[Intervalo de confiança unilateral]
 Seja $\textbf{X} = \{ X_1. \ldots, X_n \}$ uma amostra aleatória, onde cada uma tem p.d.f. $f(x \mid \theta)$, e considere uma função real $g(\theta)$. Seja $A( \textbf{X})$ uma estatística que
@@ -493,5 +493,27 @@ $$B(\textbf{X}) = r(G^{-1}(\gamma_2), \textbf{X}),$$
 
 são os limites de um intervalo de confiança de $100\gamma \%$ para $g(\theta)$.
 \end{theorem}
+
+
+\section*{Aula 14: Testes de hipótese}
+
+\begin{definition}[Hipótese nula e hipótese alternativa]
+Considere o espaço de parâmetros $\Omega$ e defina $\Omega_0, \Omega_1 \ \subset \Omega$ de modo que $\Omega_0 \cup \Omega_1 = \Omega$ e $\Omega_0 \cap \Omega_1 = \emptyset$. Definimos
+
+$$H_0 := \theta \in \Omega_0$$
+
+$$H_1 := \theta \in \Omega_1$$
+
+E dizemos que $H_0$ é a \textbf{hipótese nula} e $H_1$ é a \textbf{hipótese alternativa}.
+Se $\theta \in \Omega_1$, então dizemos que rejeitamos a hipótese nula. Por outro lado, se $\theta \in \Omega_0$, então dizemos que não rejeitamos ou falhamos em rejeitar $H_0$.
+\end{definition}
+
+\begin{definition}[Hipótese simples e hipótese composta]
+Dizemos que uma hipótese $H_i$, é \textbf{simples}, se $\Omega_i = \{ \theta_i \}$, isto é, se a partição correspondente é um único ponto. Uma hipótese é dita \textbf{composta} se não é simples.
+\end{definition}
+
+\begin{definition}[Hipótese unilateral e hipótese bilateral]
+Uma hipótese da forma $H_0 : \theta \leq \theta_0$ é dita \textbf{unilateral} (``one-sided''), enquanto hipóteses da forma $H_0 : \theta \neq \theta_0$ são ditas \textbf{bilaterais} (``two-sided'').
+\end{definition}
 
 \end{document}
