--- a/4 periodo/Abtract_of_Titica.tex
+++ b/4 periodo/Abtract_of_Titica.tex
@@ -557,4 +557,66 @@ Dizemos que um teste, $\delta$, tem \textbf{tamanho} ou \textbf{nível de signif
 $$\alpha(\delta) := \mathrm{sup}_{\theta \in \Omega_0} \pi (\theta \mid \delta).$$
 \end{definition}
 
+\section*{Aula 16: Testes de hipótese Part III}
+
+\begin{definition}[O p-valor]
+Para cada t, seja $\delta_t$ o teste que rejeita $H_0$ se $T \geq t$. Então, quando $T = t$, o \textbf{p-valor} vale
+
+\begin{equation}
+    p(t) := \sup_{\theta \in \Omega_0} \pi (\theta \mid \delta_t) = \sup_{\theta \in \Omega_0} P (T \geq t \mid \theta)
+\end{equation}
+
+ou seja, o \textbf{p-valor} é o tamanho do teste $\delta_t$.
+\end{definition}
+
+\section*{Aula 17: Testes e conjuntos de confiança}
+
+\begin{definition}[Intervalos de confiança e testes são equivalentes]
+
+Suponha que dispomos de dados $\textbf{X} = \{ X_1, \ldots, X_n \}$ com f.d.p. comum $f(x \mid \theta)$, e estamos interessados em testar as hipóteses:
+
+$$H_0 : g(\theta) = g_0,$$
+$$H_1 : g(\theta) \neq g_0,$$
+
+de modo que existe um teste $\delta_{g_0}$ com nível $\alpha_0$ destas hipóteses. Para cada $\textbf{X} = \textbf{x}$, defina
+
+$$w(\textbf{x}) = \left\{g_0: \delta_{g_0} \text{\:n\tilde{a}o\:rejeita\:} H_0 \text{\:dado\:que\:} \textbf{X} = \textbf{x} \right\}.$$
+
+Fazendo o nível de confiança do intervalo $\gamma = 1 - \alpha_0$, temos
+
+$$P(g(\theta_0) \in w(\textbf{X}) \mid \theta = \theta_0) \geq \gamma, \ \forall \theta_0 \in \Omega.$$
+\end{definition}
+
+\begin{definition}[Conjunto de confiança]
+Se um conjunto aleatório $w(\textbf{X}$ satisfaz
+
+$$P(g(\theta_0) \in w(\textbf{X}) \mid \theta = \theta_0) \geq \gamma,$$
+
+para todo $\theta_0 in \Omega$, então chamamos $w(\textbf{X})$ de um \textbf{conjunto de confiança} para $\g(\theta)$.
+\end{definition}
+
+\begin{theorem}[Testando hipóteses a partir de conjuntos de confiança]
+Suponha que dispomos de dados $\textbf{X} = \{ X_1, \ldots. X_n \}$ com f.d.p. comum $f(x \mid \theta)$ e que $w(\textbf{X})$ é um conjunto de confiança para uma função de interesse $g(\theta)$. Então para todo valor $g_0$ existe um teste $\delta_{g_0}$, de nível $\alpha_0$ que rejeita $H_0 : g(\theta) = g_0$ se e somente se $g(\theta_0) = g_0 \notin w(\textbf{X})$.
+\end{theorem}
+
+\begin{theorem}[Teste de razão de verossimilhanças]
+A estatística
+
+$$\wedge(\textbf{x}) = \frac{\sup_{\theta \in \Omega_0 f_n (\textbf{x} \mid \theta)}}{\sup_{\theta \in \Omega f_n (\textbf{x} \mid \theta)}}$$
+
+é chamada um \textbf{estatística de razão de verossimilhanças}. Um \textbf{teste de razão de verossimilhanças}, $\delta_k$, é um teste que rejeita $H_0$ se $\wedge(\textbf{x}) \leq k$ para uma constante k.
+\end{theorem}
+
+\begin{theorem}[Teorema de Wilks]
+Suponha que temos um espaço de parâmetros com k coordenadas, $\theta = (\theta_1, \ldots, \theta_n)$ e desejamos testar a hipótese (simples) da forma
+
+$$H_0 : \theta_j = \theta_0^j, \ j = 1, \ldots, k,$$
+$$H_1 : \theta_j \neq \theta_0^j, \ j = 1, \ldots, k.$$
+
+Então, sob condições de regularidade, temos que, à medida que $n \rightarrow \infty$,
+
+$$-2 \log \wedge(\textbf{x}) \stackrel{\mathrm{d}}{\rightarrow} X^2 (k)$$
+
+\end{theorem}
+
 \end{document}
