--- a/4 periodo/Abtract_of_Titica.tex
+++ b/4 periodo/Abtract_of_Titica.tex
@@ -28,7 +28,7 @@
 \newtheorem{definition}{Definição}
 
 \newcommand{\assignment}{Abstract of Titica}
-\newcommand{\duedate}{October 18, 2021}
+\newcommand{\duedate}{October 23, 2021}
 
 
 % \renewcommand\thesubsection{\arabic{subsection}}
@@ -47,7 +47,7 @@ Wellington Silva\hfill\textbf{Due:} \duedate\\
 {\let\newpage\relax\maketitle}
 \maketitle
 
-\section*{Summary}
+\section*{Sumário}
 
 \textbf{\nameref{s1}}
 \vspace{5mm}
