--- a/3 periodo/EDO_Resumo.tex
+++ b/3 periodo/EDO_Resumo.tex
@@ -48,11 +48,11 @@
 \vfill
 \begin{center}
 {{\normalsize Rio de Janeiro}\\
-{\normalsize \the\year}}
+{\normalsize 2021}}
 \end{center}
 \end{titlepage}
 
-\section*{Summary}
+\section*{Sumário}
 
 \hspace{5mm}\textbf{\nameref{s1}}
 \vspace{4mm}
